<resources>
    <string name="app_name">SmartVote</string>
    <string name="count_down">Count Down To Election Day</string>
    <string name="title">สำนักงานคณะกรรมการเลือกตั้ง</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="next">Next</string>
</resources>